src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Global: Identifies the type of business the lead is in reference to.</description>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Higher Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_if_Other__c</fullName>
        <description>Global: specifies the type of business that the Lead is in reference too if the standard Line of Business field is specified with the value &apos;other&apos;.</description>
        <label>Line of Business (if Other)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>Global Identifies the country that the Lead belongs to.</description>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>ZA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matric_Year__c</fullName>
        <description>CTIMGI: Identifies the year that the contact on the Lead passed their Matric Examinations. This field is unique to South Africa.</description>
        <label>Matric Year</label>
        <picklist>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1972</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1978</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1979</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>CTIMGI: Identifies the middle name of the contact on the Lead.</description>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Type1__c</fullName>
        <description>Global/CTIMGI: Identifies the type of organisation the Account record is for the new account request functionality.</description>
        <label>Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>Government/Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO/ Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <description>CTIMGI: Type of Organization the Lead is related to. This is used in the request a new Account functionality.</description>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Bookstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HED Bookstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <description>CTIMGI: Captures the first language of the contact on the lead if the value &apos;Other&apos; has been selected in the First Language picklist field.</description>
        <label>Other Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Lead_Source__c</fullName>
        <description>CORE/Global: Text field to capture the Lead Source if the source is not available in the standard Lead source picklist values.</description>
        <label>Other Lead Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <description>CTIMGI: Field to capture the phone number of the student prospect, which is not their home or standard phone number.</description>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Passport_Number__c</fullName>
        <description>CTIMGI: Captures the passport number of the contact on the Lead.</description>
        <label>Passport Number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pearson_ID_Number__c</fullName>
        <description>CTIMGI: This field assigns a unique student Identification number to a Lead.</description>
        <label>Pearson ID Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <description>Global/CTIMGI - records the city for the billing address in the request a new account functionality.</description>
        <label>Physical City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <description>Global/CTIMGI: Field to record the country for the Billing address of an account for the request a new account functionality.</description>
        <label>Physical Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Physical_State_Province__c</fullName>
        <description>Global/CTIMGI: Field to record the State for the Billing address of an account for the request a new account functionality.</description>
        <label>Physical State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Street__c</fullName>
        <description>Global/CTIMGI: Field to record the street for the Billing address of an account for the request a new account functionality.</description>
        <label>Physical Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Campus__c</fullName>
        <description>CTIMGI: Identifies the campus that the contact on the Lead wants to complete the course/qualification that they are interested in taking.</description>
        <label>Preferred Campus</label>
        <picklist>
            <picklistValues>
                <fullName>Bedfordview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloemfontein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Town</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durbanville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midrand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nelspruit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Elizabeth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potchefstroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pretoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randburg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanderbijlpark</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>CTIMGI: Identfies the preferred method that the contact on the Lead wants t be communcated with.</description>
        <label>Preferred Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile/Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <description>Global: Field to capture the primary email address for the request a new account functionality.</description>
        <label>Primary Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>Global: Field to show which is the main phone that the prospect should be contacted on.</description>
        <label>Primary Contact Number</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CORE: Looks up the product or service that the Lead is associated to.</description>
        <label>Product / Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Qualify_Out__c</fullName>
        <description>Global: Captures the reason that the Lead has moved into the Unqualified status.</description>
        <label>Reason for Qualify Out</label>
        <picklist>
            <picklistValues>
                <fullName>Qualification not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding complications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student start year deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Account_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global: Checkbox to initiate the request a new account functionality.</description>
        <label>Request Account Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retain_current_owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is check when to show the the Lead has already been assigned.</description>
        <label>Retain current owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_assignment_rules__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Global: This field is used to assign Leads with the assignment rules during lead creation. This field is defaulted to true and updated to false on lead creation. When the checkbox is false the first rule of the lead assignment rules will ensure that the lead stays with the current owner and the Lead will not be reassigned.</description>
        <label>Run assignment rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_text_field__c</fullName>
        <description>CTIMGI: This field looks up the Institution/organisation field on Lead object and converts the lookup value to a string. This is then mapped to the School field on the contact record when the Lead is converted.</description>
        <formula>Institution_Organisation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School text field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Email__c</fullName>
        <description>Global: Field to record the secondary emaul address for the request a new account functionality.</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sponsor_Address_City__c</fullName>
        <description>CTIMGI: Field to capture the city of the address for Sponsor who is responsible for paying for the students fees.</description>
        <label>Sponsor Address: City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Address_Country__c</fullName>
        <description>CTIMGI: field to identify the country of the sponsors address responsible for paying the students fees.</description>
        <label>Sponsor Address: Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Address_State_Province__c</fullName>
        <description>CTIMGI Field to capture the Province for the address of the sponsor responsible for paying the students fees.</description>
        <label>Sponsor Address: State/Province</label>
        <picklist>
            <controllingField>Sponsor_Address_Country__c</controllingField>
            <picklistValues>
                <fullName>Eastern Cape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gauteng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KwaZulu-Natal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limpopo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mpumalanga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Cape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Cape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chhattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman and Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra and Nagar Haveli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu and Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshadweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Address_Street__c</fullName>
        <description>CTIMGI: Field to capture the street of the address for Sponsor who is responsible for paying for the students fees.</description>
        <label>Sponsor Address: Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Address_ZIP_Postal_Code__c</fullName>
        <description>CTIMGI: Field to capture the street of the postcode/ZIP for Sponsor who is responsible for paying for the students fees.</description>
        <label>Sponsor Address: ZIP/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Email__c</fullName>
        <description>CTIMGI: Captures the email address of the Lead Contacts Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sponsor_Home_Phone__c</fullName>
        <description>CTIMGI: Captures the work phone number of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sponsor_Mobile__c</fullName>
        <description>CTIMGI: Captures the mobile number of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sponsor_Name__c</fullName>
        <description>CTIMGI: Captures the Last name of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Phone__c</fullName>
        <description>CTIMGI: Captures the phone number of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sponsor_Preferred_Method_of_Contact__c</fullName>
        <description>CTIMGI: Captures the preferred method that the Lead Contact&apos;s Sponsor wants to be contacted by. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Salutation__c</fullName>
        <description>CTIMGI: Captures the salutation of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor Title</label>
        <picklist>
            <picklistValues>
                <fullName>Adv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assoc. Prof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assist. Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Prof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chancellor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Col.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lt.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lt. Col</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lt. Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabbi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsor_Sponsor__c</fullName>
        <description>CTIMGI: Captures the first name of the Lead Contact&apos;s Sponsor. The Sponsor is responsible for paying the Student&apos;s fees for courses and qualifications.</description>
        <label>Sponsor First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>